Fixed Scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,33 +76,34 @@
   }
 }
 
-.scrollbar, .scrollbar2 {
-  scrollbar-color: #6B7280 #E5E7EB;
-}
-
 .scrollbar::-webkit-scrollbar {
   width: 10px;
   padding: 2px;
 }
 
-.scrollbar::-webkit-scrollbar-thumb {
-  background-color: #A0A3BD;
-  border: 4px solid white;
-  border-radius: 8px;
+.scrollbar::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+  border-radius: 16px;
 }
 
-.scrollbar::-webkit-scrollbar-track, .scrollbar2::-webkit-scrollbar-track {
-  background-color: white;
-  border-radius: 8px;
+.scrollbar::-webkit-scrollbar-thumb {
+  background: #6b7280;
+  border: 4px solid #f1f1f1;
+  border-radius: 16px;
 }
 
 .scrollbar2::-webkit-scrollbar {
-  width: 16px;
+  width: 18px;
   padding: 2px;
 }
 
+.scrollbar2::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+  border-radius: 16px;
+}
+
 .scrollbar2::-webkit-scrollbar-thumb {
-  background-color: #A0A3BD;
-  border: 4px solid white;
-  border-radius: 8px;
+  background: #6b7280;
+  border: 4px solid #f1f1f1;
+  border-radius: 16px;
 }
